app/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}




/* ATOM SIMULATION Styles begin */

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 12px;
    position: relative;
    color: #BD9100;

    /* No scroll bars */
    overflow: hidden;
}

hgroup {
    margin: 0;
    position: absolute;
    bottom: 1.5em;
    right: 2em;
    z-index: 1;
}

h1, h2 {
    line-height: 0em;
}

h1 {
    font-size: 1.5em;
}
h2 {
    font-size: 0.8em;
}

canvas {
    border: 1px solid black;
    position: absolute;
}

button {
    background-color: #eaeaea;
}

#toggle-headers-and-panels {
    position: absolute;
}

#top-left {
    position: absolute;
}

#input-window {
    position: absolute;
    bottom: 1em;
    left: 1em;
}

#errors {
    position: absolute;
    bottom: 1em;
    right: 11em;
    color: red;
    font-size: 1.4em;
}

.atom-display {
    line-height: 0.5em;
    padding: 0 10px;
}

#sim-controls-play {
    position: absolute;
    left: 50%;
    margin-left: -100px;
    bottom: 3em;
}

#sim-controls-play button {
    text-align: center;
    vertical-align: middle;
    font-size: 5em;
    border: none;
    background-color: inherit;
}

#play-pause {
    width: 1em;
}

#next-instance, #previous-instance {
    padding-bottom: .3em;
}

#next-instance:first-letter, #previous-instance:first-letter {
    letter-spacing: -.3em;
}

.atom-display {
    border: 1px solid black;
}

#sim-controls-other button {
    width: 13em;
}

#display {
    position: absolute;
    right: 1em;
    top: 1em;
    background-color: white;
}

.atom-display h3 {
    text-align: center;
}

.hidden {
    display: none;
}

/* Menu */
#toggle-all {
    width: 4em;
}

#toggle-shortcuts {
    width: 9em;
}

/* Shortcuts */
#shortcuts {
    position: absolute;
    top: 50%;
    margin-top: -160px;
    left: 50%;
    margin-left: -80px;
    border: 1px solid black;
    background-color: white;
}

#shortcuts h3 {
    text-align: center;
}

#shortcuts ul {
    list-style: none;
    padding: 10px;
}

#close-shortcuts {
    position: absolute;
    top: 0px;
    right: 0px;
}

span.shortcut {
    font-style: italic;
}

span.shortcut::before {
    content: '{';
}

span.shortcut::after {
    content: '}';
}

